--- a/src/.deps/crc16.Po
+++ b/src/.deps/crc16.Po
@@ -1,6 +1,7 @@
-crc16.o crc16.o: crc16.cpp /usr/include/stdio.h /usr/include/_types.h \
-  /usr/include/sys/_types.h /usr/include/sys/cdefs.h \
-  /usr/include/machine/_types.h /usr/include/i386/_types.h myTypes.h \
+crc16.o crc16.o: ../../rcsLib/crc/crc16.cpp /usr/include/stdio.h \
+  /usr/include/_types.h /usr/include/sys/_types.h \
+  /usr/include/sys/cdefs.h /usr/include/machine/_types.h \
+  /usr/include/i386/_types.h ../../rcsLib/crc/../ortsTypes/ortsTypes.h \
   /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stddef.h \
   /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stdint.h
 
@@ -16,7 +17,7 @@ crc16.o crc16.o: crc16.cpp /usr/include/stdio.h /usr/include/_types.h \
 
 /usr/include/i386/_types.h:
 
-myTypes.h:
+../../rcsLib/crc/../ortsTypes/ortsTypes.h:
 
 /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stddef.h:
 
