--- a/src/.deps/global.Po
+++ b/src/.deps/global.Po
@@ -1,8 +1,8 @@
-global.o global.o: global.cpp ../../ortsTypes/ortsTypes.h \
+global.o global.o: global.cpp ../../rcsLib/ortsTypes/ortsTypes.h \
   /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stddef.h \
   /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stdint.h
 
-../../ortsTypes/ortsTypes.h:
+../../rcsLib/ortsTypes/ortsTypes.h:
 
 /usr/lib/gcc/i686-apple-darwin10/4.2.1/include/stddef.h:
 
